# Keel

./: .gitignore  AGENTS.md  Makefile  README.en.md  README.md  index.html  keel-landing.html  pyproject.toml
design/: logo-README.md  logo-prototype-v2.html  logo-prototype.html
docs/: Keel-HANDOFF.md  Keel-Model-API-Configuration-IMPLEMENTATION-PLAN.md  Pi-Python-Agent-Runtime-SDK-IMPLEMENTATION-PLAN.md  agent-runtime-recommended-direction-implementation.md
examples/: __init__.py  quickstart_agent.py
examples/fastapi_app/: app.py
src/keel_runtime/: __init__.py  agent.py  cleanup.py  collaboration.py  context.py  errors.py  events.py  gate.py  jobs.py  loop.py  manager.py  memory.py  models.py  object_storage.py  output.py  runtime.py  security.py  skills.py  specs.py  stores.py  tools.py
tests/: test_agent_job_runtime.py  test_agent_loop_checkpoint.py  test_fastapi_example.py  test_job_attempts.py  test_models.py  test_phase1_local_mvp.py  test_phase2_persistence.py  test_phase3_production_boundaries.py  test_phase4_model_configuration.py  test_phase4_task_interface.py  test_phase55_agent_loop.py  test_phase55_context.py  test_phase55_gate.py  test_phase55_inprocess_runtime.py  test_phase55_memory.py  test_phase55_output.py  test_phase55_quickstart.py  test_phase55_reference_fixtures.py  test_phase55_skills.py  test_phase55_tools.py  test_phase5_multi_agent_collaboration.py  test_strict_output.py  test_tool_errors.py
