[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "keel-runtime"
version = "0.1.0"
description = "Persistent agent job runtime for Python services."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
fastapi = [
  "fastapi>=0.110,<1.0",
  "starlette<1.0",
  "uvicorn>=0.27",
]
s3 = [
  "boto3>=1.34",
]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/keel_runtime"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
